--- a/src/bm/BullMonitor.Ticker.Process/BullMonitor.Ticker.Process.csproj
+++ b/src/bm/BullMonitor.Ticker.Process/BullMonitor.Ticker.Process.csproj
@@ -5,7 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-	
+
+	<ItemGroup>
+		<InternalsVisibleTo Include="BullMonitor.Ticker.Process.Tests" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<ProjectReference Include="..\..\swe\SWE.Infrastructure.Abstractions\SWE.Infrastructure.Abstractions.csproj" />
 		<ProjectReference Include="..\..\swe\SWE.Infrastructure.Sql\SWE.Infrastructure.Sql.csproj" />
