--- a/tests/bm/BullMonitor.DataMine.Tests/BullMonitor.DataMine.Tests.csproj
+++ b/tests/bm/BullMonitor.DataMine.Tests/BullMonitor.DataMine.Tests.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 		<None Remove="Resources\tipranks_LIZI.json" />
+		<None Remove="Resources\tipranks_MSFT.json" />
 		<None Remove="Resources\zacksrank_LIZI.json" />
 		<None Remove="Resources\zacksrank_MSFT.json" />
 	</ItemGroup>
@@ -26,6 +27,24 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\src\bm\BullMonitor.DataMine\BullMonitor.DataMine.csproj" />
 	  <ProjectReference Include="..\..\swe\SWE.Tests\SWE.Tests.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="Resources\tipranks_LIZI.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\tipranks_MSFT.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Resources\zacksrank_LIZI.json">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Resource Include="Resources\zacksrank_MSFT.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Resource>
+		<Content Include="Resources\zacksrank_MSFT.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 </Project>
