test setup but not yet finished

--- a/src/bm/BullMonitor.Ticker.Api.Abstractions/BullMonitor.Ticker.Api.Abstractions.csproj
+++ b/src/bm/BullMonitor.Ticker.Api.Abstractions/BullMonitor.Ticker.Api.Abstractions.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Requests\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\swe\SWE.Infrastructure.Abstractions\SWE.Infrastructure.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
