--- a/src/bm/BullMonitor.Ticker.Handlers/appsettings.json
+++ b/src/bm/BullMonitor.Ticker.Handlers/appsettings.json
@@ -7,6 +7,14 @@
     }
   },
 
+  "HttpClientConfiguration": {
+    "Company": {
+      "Uri": "https://localhost:7232",
+      "Username": "",
+      "Password": ""
+    }
+  },
+
   "ConnectionStrings": {
     "MinimumConnectionPoolSize": 20,
     "MaximumConnectionPoolSize": 299,
