--- a/src/bm/BullMonitor.Ticker.Handlers/appsettings.json
+++ b/src/bm/BullMonitor.Ticker.Handlers/appsettings.json
@@ -59,12 +59,39 @@
           }
         ]
       },
+
       {
         "Name": "TickerSyncMessage",
         "ExchangeType": "direct",
         "Queue": [
           {
             "Name": "TickerSyncMessage",
+            "Routingkey": "",
+            "AutoDelete": false,
+            "Durable": true
+          }
+        ]
+      },
+
+      {
+        "Name": "ZacksRankSyncMessage",
+        "ExchangeType": "direct",
+        "Queue": [
+          {
+            "Name": "ZacksRankSyncMessage",
+            "Routingkey": "",
+            "AutoDelete": false,
+            "Durable": true
+          }
+        ]
+      },
+
+      {
+        "Name": "ZacksRankSyncMessage",
+        "ExchangeType": "direct",
+        "Queue": [
+          {
+            "Name": "ZacksRankSyncMessage",
             "Routingkey": "",
             "AutoDelete": false,
             "Durable": true
