--- a/src/bm/BullMonitor.Ticker.Process/BullMonitor.Ticker.Process.csproj
+++ b/src/bm/BullMonitor.Ticker.Process/BullMonitor.Ticker.Process.csproj
@@ -15,6 +15,7 @@
 		<ProjectReference Include="..\..\swe\SWE.Infrastructure.Sql\SWE.Infrastructure.Sql.csproj" />
 		<ProjectReference Include="..\..\swe\SWE.Process\SWE.Process.csproj" />
 		<ProjectReference Include="..\..\swe\SWE.Rabbit.Abstractions\SWE.Rabbit.Abstractions.csproj" />
+		<ProjectReference Include="..\..\swe\SWE.Rabbit\SWE.Rabbit.csproj" />
 		<ProjectReference Include="..\BullMonitor.Abstractions\BullMonitor.Abstractions.csproj" />
 		<ProjectReference Include="..\BullMonitor.Data.Sql\BullMonitor.Data.Sql.csproj" />
 	</ItemGroup>
