--- a/src/bm/handlers/BullMonitor.Ticker.Handlers/appsettings.json
+++ b/src/bm/handlers/BullMonitor.Ticker.Handlers/appsettings.json
@@ -74,11 +74,11 @@
       },
 
       {
-        "Name": "ZacksRankSyncMessage",
+        "Name": "ZacksSyncMessage",
         "ExchangeType": "direct",
         "Queue": [
           {
-            "Name": "ZacksRankSyncMessage",
+            "Name": "ZacksSyncMessage",
             "Routingkey": "",
             "AutoDelete": false,
             "Durable": true
@@ -87,11 +87,11 @@
       },
 
       {
-        "Name": "ZacksRankSyncMessage",
+        "Name": "ZacksTickerSyncMessage",
         "ExchangeType": "direct",
         "Queue": [
           {
-            "Name": "ZacksRankSyncMessage",
+            "Name": "ZacksTickerSyncMessage",
             "Routingkey": "",
             "AutoDelete": false,
             "Durable": true
