--- a/tests/bm/BullMonitor.Ticker.Api.Abstractions.Tests/BullMonitor.Ticker.Api.Abstractions.Tests.csproj
+++ b/tests/bm/BullMonitor.Ticker.Api.Abstractions.Tests/BullMonitor.Ticker.Api.Abstractions.Tests.csproj
@@ -18,6 +18,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\..\src\bm\BullMonitor.Ticker.Api.Abstractions\BullMonitor.Ticker.Api.Abstractions.csproj" />
+	  <ProjectReference Include="..\..\..\src\bm\api\BullMonitor.Ticker.Api.Abstractions\BullMonitor.Ticker.Api.Abstractions.csproj" />
 	</ItemGroup>
 </Project>
