--- a/tests/bm/BullMonitor.Ticker.Api.SDK.Tests/BullMonitor.Ticker.Api.SDK.Tests.csproj
+++ b/tests/bm/BullMonitor.Ticker.Api.SDK.Tests/BullMonitor.Ticker.Api.SDK.Tests.csproj
@@ -32,7 +32,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\..\src\bm\BullMonitor.Ticker.Api.SDK\BullMonitor.Ticker.Api.SDK.csproj" />
+		<ProjectReference Include="..\..\..\src\bm\api\BullMonitor.Ticker.Api.SDK\BullMonitor.Ticker.Api.SDK.csproj" />
+		<ProjectReference Include="..\..\..\src\swe\SWE.Issue.Abstraction\SWE.Issue.Abstraction.csproj" />
 		<ProjectReference Include="..\..\swe\SWE.Tests\SWE.Tests.csproj" />
 	</ItemGroup>
 
