--- a/src/bm/BullMonitor.Data.Storage/BullMonitor.Data.Storage.csproj
+++ b/src/bm/BullMonitor.Data.Storage/BullMonitor.Data.Storage.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.21.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\swe\SWE.Time\SWE.Time.csproj" />
+  </ItemGroup>
+
 </Project>
