Test seups and movement of code

--- a/src/bm/BullMonitor.Data.Mongo/BullMonitor.Data.Mongo.csproj
+++ b/src/bm/BullMonitor.Data.Mongo/BullMonitor.Data.Mongo.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\BullMonitor.Data.Storage\BullMonitor.Data.Storage.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="BullMonitor.Data.Mongo.Tests" />
+	</ItemGroup>
+
 </Project>
