Mongo setup made

--- a/src/bm/handlers/BullMonitor.TickerValue.Handlers/appsettings.json
+++ b/src/bm/handlers/BullMonitor.TickerValue.Handlers/appsettings.json
@@ -21,8 +21,8 @@
     "MultipleActiveResultSets": true,
     "CommandTimeoutSeconds": 120,
     "MaxRetryCount": 2,
-    "MaxRetryDelaySeconds": 36,
-},
+    "MaxRetryDelaySeconds": 36
+  },
 
   "RabbitConfiguration": {
     "HostName": "localhost",
