--- a/src/bm/handlers/BullMonitor.Ticker.Handlers/BullMonitor.Ticker.Handlers.csproj
+++ b/src/bm/handlers/BullMonitor.Ticker.Handlers/BullMonitor.Ticker.Handlers.csproj
@@ -6,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>0a909561-0ad2-4927-b9f6-b4b12ab8502f</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-		<DockerfileContext>..\..\..</DockerfileContext>
+		<DockerfileContext>..\..\..\..</DockerfileContext>
 	</PropertyGroup>
 
 	<ItemGroup>
