--- a/src/bm/handlers/BullMonitor.Ticker.Handlers/Properties/launchSettings.json
+++ b/src/bm/handlers/BullMonitor.Ticker.Handlers/Properties/launchSettings.json
@@ -7,6 +7,19 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:57825;http://localhost:57826"
+    },
+
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger/index.html",
+      "environmentVariables": {
+        "ASPNETCORE_URLS": "https://+:443;http://+:80"
+      },
+      "publishAllPorts": true,
+      "httpPort": 57826,
+      "sslPort": 57825,
+      "useSSL": true
     }
   }
 }
