--- a/src/bm/handlers/BullMonitor.TickerValue.Handlers/appsettings.json
+++ b/src/bm/handlers/BullMonitor.TickerValue.Handlers/appsettings.json
@@ -70,7 +70,41 @@
             "Durable": true
           }
         ]
+      },
+
+      {
+        "Name": "TipRanksSyncMessage",
+        "ExchangeType": "direct",
+        "Queue": [
+          {
+            "Name": "TipRanksSyncMessage",
+            "Routingkey": "",
+            "AutoDelete": false,
+            "Durable": true
+          }
+        ]
+      },
+
+      {
+        "Name": "TipRanksTickerSyncMessage",
+        "ExchangeType": "direct",
+        "Queue": [
+          {
+            "Name": "TipRanksTickerSyncMessage",
+            "Routingkey": "",
+            "AutoDelete": false,
+            "Durable": true
+          }
+        ]
       }
     ]
+  },
+
+  "PolicyConfiguration": {
+    "RetryCount": 4,
+    "BreakDurationExponential": false, // Not exponential
+    "BreakDurationInSeconds": 15, // => 15, 45, 90, 150, 225  
+    "MaxTotalRetryDurationInSeconds": 300, // should be equal or larger than RetryCount * ClientRequestTimeoutInSeconds
+    "ClientRequestTimeoutInSeconds": 100 // default is 100s
   }
 }
