--- a/src/bm/api/BullMonitor.Ticker.Api/Properties/launchSettings.json
+++ b/src/bm/api/BullMonitor.Ticker.Api/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7232;http://localhost:5264"
+      "applicationUrl": "https://localhost:44352;http://localhost:44353"
     },
 
     "IIS Express": {
@@ -28,6 +28,8 @@
         "ASPNETCORE_URLS": "https://+:443;http://+:80"
       },
       "publishAllPorts": true,
+      "httpPort": 44353,
+      "sslPort": 44352,
       "useSSL": true
     }
   },
@@ -37,8 +39,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:43880",
-      "sslPort": 44353
+      "applicationUrl": "http://localhost:44353",
+      "sslPort": 44352
     }
   }
 }
