--- a/tests/bm/BullMonitor.DataMine.Tests/BullMonitor.DataMine.Tests.csproj
+++ b/tests/bm/BullMonitor.DataMine.Tests/BullMonitor.DataMine.Tests.csproj
@@ -10,13 +10,6 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<None Remove="Resources\tipranks_LIZI.json" />
-		<None Remove="Resources\tipranks_MSFT.json" />
-		<None Remove="Resources\zacksrank_LIZI.json" />
-		<None Remove="Resources\zacksrank_MSFT.json" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="FluentAssertions" Version="6.12.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
 		<PackageReference Include="xunit" Version="2.5.1" />
@@ -30,18 +23,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Content Include="Resources\tipranks_LIZI.json">
+		<Content Include="Resources\tipRanks_LIZI.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="Resources\tipranks_MSFT.json">
+		<Content Include="Resources\tipRanks_MSFT.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 		<Content Include="Resources\zacksrank_LIZI.json">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Resource Include="Resources\zacksrank_MSFT.json">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Resource>
 		<Content Include="Resources\zacksrank_MSFT.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
