--- a/src/bm/api/BullMonitor.Ticker.Api/appsettings.local.json
+++ b/src/bm/api/BullMonitor.Ticker.Api/appsettings.local.json
@@ -15,7 +15,16 @@
     "MaxRetryCount": 2,
     "MaxRetryDelaySeconds": 36,
 
-    "TickerConnectionString": "Server=192.168.1.136; Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
+    // LAN
+    //"TickerConnectionString": "Server=192.168.1.136; Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
+    
+    // WIFI
+    "TickerConnectionString": "Server=192.168.1.215; Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
+    
+    // Kantoor
+    //"TickerConnectionString": "Server=192.168.11.62; Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
+    
+    //"TickerConnectionString": "Server=NS-7MT7GK3 Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
 
     "Mongo": "mongodb+srv://ns_consumption:hJ5xNrKN9KbKdR@nsconsumption.lyhyclq.mongodb.net/?retryWrites=true&w=majority"
   },
