Implementing Value in Api

--- a/src/bm/BullMonitor.Ticker.Core/BullMonitor.Ticker.Core.csproj
+++ b/src/bm/BullMonitor.Ticker.Core/BullMonitor.Ticker.Core.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\api\BullMonitor.Ticker.Api.Abstractions\BullMonitor.Ticker.Api.Abstractions.csproj" />
+    <ProjectReference Include="..\BullMonitor.Data.Mongo\BullMonitor.Data.Mongo.csproj" />
     <ProjectReference Include="..\BullMonitor.Data.Sql\BullMonitor.Data.Sql.csproj" />
+    <ProjectReference Include="..\BullMonitor.TickerValue.Core\BullMonitor.TickerValue.Core.csproj" />
   </ItemGroup>
 
 	<ItemGroup>
