--- a/src/bm/api/BullMonitor.Ticker.Api.Abstractions/BullMonitor.Ticker.Api.Abstractions.csproj
+++ b/src/bm/api/BullMonitor.Ticker.Api.Abstractions/BullMonitor.Ticker.Api.Abstractions.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\swe\SWE.Infrastructure.Abstractions\SWE.Infrastructure.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\swe\SWE.Time\SWE.Time.csproj" />
+    <ProjectReference Include="..\..\BullMonitor.Abstractions\BullMonitor.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
