--- a/src/bm/api/BullMonitor.Ticker.Api/appsettings.local.json
+++ b/src/bm/api/BullMonitor.Ticker.Api/appsettings.local.json
@@ -11,21 +11,22 @@
     "MinimumConnectionPoolSize": 20,
     "MaximumConnectionPoolSize": 299,
     "MultipleActiveResultSets": true,
-    "CommandTimeoutSeconds": 120,
+    "CommandTimeoutSeconds": 8,
     "MaxRetryCount": 2,
-    "MaxRetryDelaySeconds": 36,
+    "MaxRetryDelaySeconds": 16,
+
+    "TickerConnectionString": "Server=DESKTOP-2T22QKI; Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
 
     // LAN
     //"TickerConnectionString": "Server=192.168.1.136; Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
 
     // WIFI
-    "TickerConnectionString": "Server=192.168.1.213; Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
+    //"TickerConnectionString": "Server=192.168.1.102; Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
+    //"TickerConnectionString": "Server=192.168.1.213; Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
     //"TickerConnectionString": "Server=192.168.1.215; Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
 
     // Kantoor
     //"TickerConnectionString": "Server=192.168.11.61; Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
-
-    //"TickerConnectionString": "Server=NS-7MT7GK3 Database=TickerDb; User Id=TickerAdmin; Password=#K77W2I9e6fb; TrustServerCertificate=True",
 
     //"Mongo": "mongodb+srv://ns_consumption:hJ5xNrKN9KbKdR@nsconsumption.lyhyclq.mongodb.net/?retryWrites=true&w=majority",
     "Mongo": "mongodb://localhost:27017"
