--- a/tests/bm/BullMonitor.Ticker.Core.Tests/BullMonitor.Ticker.Core.Tests.csproj
+++ b/tests/bm/BullMonitor.Ticker.Core.Tests/BullMonitor.Ticker.Core.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<PlatformTarget>x64</PlatformTarget>
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
@@ -51,6 +51,10 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\src\bm\BullMonitor.Ticker.Core\BullMonitor.Ticker.Core.csproj" />
 		<ProjectReference Include="..\..\swe\SWE.Tests\SWE.Tests.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Factories\" />
 	</ItemGroup>
 	
 </Project>
